--- a/sandbox/css-02/index.html
+++ b/sandbox/css-02/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Název stránky</title>
+    <title>title.com</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<h1>Název stránky</h1>
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras elementum. Cum sociis natoque penatibus et magnis dis
-    parturient montes, nascetur ridiculus mus. Fusce consectetuer risus a nunc. Aliquam ante. Mauris tincidunt sem sed
-    arcu. Fusce consectetuer risus a nunc. Etiam egestas wisi a erat. Cras pede libero, dapibus nec, pretium sit amet,
-    tempor quis. Aliquam id dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-    hymenaeos. Nullam at arcu a est sollicitudin euismod. Etiam ligula pede, sagittis quis, interdum ultricies,
-    scelerisque eu. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed
-    libero. Nulla est. Integer malesuada. Etiam neque. Mauris suscipit, ligula sit amet pharetra semper, nibh ante
-    cursus purus, vel sagittis velit mauris vel metus. In rutrum.</p>
+<h1>title.com</h1>
+<p><h2>A tree has fallen!</h2></p>
+<img src="obrazky/tree.jpg" 
+alt=""
+width="400"
+height="200">
 <div><a href="http://www.lorem-ipsum.cz/?action=generate&lang=en&par=5&start_w_lipsum=on">http://www.lorem-ipsum.cz</a></div>
 </body>
 </html>
