--- a/sandbox/gab sanbox/indexg.html
+++ b/sandbox/gab sanbox/indexg.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="cz">
   <head>
-    <title>První HTML stránka</title>
-    <link rel="icon" type="image/svg" href="obrazky/iconmonstr_favicone.svg" />
-    <style>
-      td,
-      th {
-        border: 1px solid black;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <title>Název stránky</title>
+    <link rel="stylesheet" href="gabcss.css">
   </head>
 
   <body style="max-width: 800px; margin: 50px auto">
