--- a/sandbox/project/index.html
+++ b/sandbox/project/index.html
@@ -8,7 +8,15 @@
 <body>
 <h1>title.com</h1>
 <h2>News from world of technology</h2>
-<p></p>
-<div><a href="http://www.lorem-ipsum.cz/?action=generate&lang=en&par=5&start_w_lipsum=on"></a></div>
+<h1>Graphicscards are not aviable...</h1>
+<img src="obrazky/" alt=""
+width="400"
+height="200">
+<p>Graphics cards are not available, they are bought by cryptocurrency miners.</p>
+<span></span>
+<h2>News</h2>
+
+<h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with the authorities because of this</h1>
+<div><a href=></a></div>
 </body>
 </html>
