--- a/sandbox/project/index.html
+++ b/sandbox/project/index.html
@@ -9,14 +9,13 @@
 <h1>title.com</h1>
 <h2>News from world of technology</h2>
 <h1>Graphicscards are not aviable...</h1>
-<img src="obrazky/" alt=""
-width="400"
+<a href="grafcard.html">graphicscards are not aviable...</a>
+<img src="obrazky/gk2.jfif" alt=""
+width="auto"
 height="200">
-<p>Graphics cards are not available, they are bought by cryptocurrency miners.</p>
-<span></span>
-<h2>News</h2>
 
-<h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with the authorities because of this</h1>
+<h2>News</h2>
+<h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with the authorities.</h1>
 <div><a href=></a></div>
 </body>
 </html>
