--- a/sandbox/project/index.html
+++ b/sandbox/project/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <title>title.com</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dropdown-menu.css">
 </head>
 
 <body>
     <div class="page-header">
-        <h1>title.com</h1>
+        <h1 class="title">title.com</h1>
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </div>
     </div>
 
 
