--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -7,4 +7,24 @@
 </head>
 <body>
 <h1>title.com</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi magnam explicabo ab voluptatem iure.</p>
+<h2>Graphics cards are not available</h2>
+<img src="obrazky/gk2.jfif" alt=""
+width="auto"
+height="200">
+<style>
+    div {
+      background-color: lightgrey;
+      width: 300px;
+      border: 15px solid rgb(177, 93, 8);
+      padding: 50px;
+      margin: 20px;
+    }
+    </style>
+<p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by cryptocurrency miners.
+
+
+
+
+
+
+
