--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -10,12 +10,18 @@
 <body>
     <div class="page-header">
         <h1 class="title">title.com</h1>
+        <div class="subheading">
+            <div> dolor sit amet</div>
+            <div class="spacer"></div>
+        </div>
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
                 <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+                <a href="">Subscribe to our newsletter</a>
             </div>
         </div>
     </div>
