--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>title.com</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dropdown-menu.css">
 </head>
+
+
 <body>
-<h1>title.com</h1>
-<h2>Graphics cards are not available</h2>
-<img src="obrazky/gk2.jfif" alt=""
-width="auto"
-height="200">
-<style>
-    div {
-      background-color: lightgrey;
-      width: 300px;
-      border: 15px solid rgb(177, 93, 8);
-      padding: 50px;
-      margin: 20px;
-    }
-    </style>
-<p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by cryptocurrency miners.
+  <div class="page-header">
+    <h1 class="title">title.com</h1>
+    <div class="subheading">
+        <div> dolor sit amet</div>
+        <div class="spacer"></div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            <a href="#">Link 4</a>
+            <a href="">Subscribe to our newsletter</a>
+        </div>
+    </div>
+  </div>
+
+  <section>
+    <h2>Graphics cards are not available</h2>
+    <img src="obrazky/gk2.jfif" alt=""
+      width="auto"
+      height="200">
+    <p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by cryptocurrency miners.
+  </section>
 
 
 
