--- a/sandbox/indexa.html
+++ b/sandbox/indexa.html
@@ -18,10 +18,10 @@
 
 			<div class="footer-right">
 
-				<a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-				<a target="_blank" href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i></a>
-				<a target="_blank" href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
-				<a target="_blank" href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram"></i></a>
+				<a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+				<a target="_blank" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+				<a target="_blank" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+				<a target="_blank" href="https://www.instagram.com/?hl=en"><i class="fa-brands fa-instagram"></i></a>
 
 			</div>
 
