--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -11,7 +11,7 @@
     <div class="page-header">
         <h1 class="title">title.com</h1>
         <div class="subheading">
-            <div> dolor sit amet</div>
+            <div> your daily news on the go</div>
             <div class="spacer"></div>
         </div>
         <div class="dropdown">
@@ -47,6 +47,13 @@
             Integer mattis posuere leo quis porta. Phasellus vel lobortis augue, non eleifend velit. Sed malesuada ligula sapien, vitae euismod tortor tincidunt eu. Donec ut sollicitudin mi. Integer vestibulum faucibus sem, id tincidunt mi accumsan non. Vivamus faucibus volutpat diam, vitae laoreet odio ultricies ac. Aliquam erat volutpat. Nunc tempor sem nec lorem consectetur mattis. Suspendisse sed commodo lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus. In quis suscipit velit. Donec consequat ac orci in sodales. Suspendisse et arcu nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed tempor interdum tortor.</h1>
         <div><a href=></a></div>
     </section>
+
+
+    <div class="footer">
+        <div class="footer-content">
+            aaaa
+        </div>
+    </div>
 </body>
 
 </html>
