--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -12,7 +12,7 @@
   <div class="page-header">
     <h1 class="title">title.com</h1>
     <div class="subheading">
-        <div> dolor sit amet</div>
+        <div>your daily news on the go</div>
         <div class="spacer"></div>
     </div>
     <div class="dropdown">
