--- a/sandbox/indexa.html
+++ b/sandbox/indexa.html
@@ -2,41 +2,36 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="stylesa.css">
-    <header>
-        <title>Title.com News</title>
-        <h1>Title.com - the Best News Provider in our Modern World</h1>
-        <a id="idnesfire" target=”_blank” href="https://www.idnes.cz/zpravy/domaci/hrensko-ceske-svycarsko-dym-kour-zplodiny-vitr-vanuti-smer-skodliviny.A220726_112938_domaci_ised"><h2>Czech Switzerland currently on fire</h2></a>
-        <img id="forest fire" src="https://1gr.cz/fotky/idnes/22/073/cl5/IBA950129_p2022072601843.jpg">
-    </header>  
-</head> 
-<!-- Weather Forecast - Prague--> <div id="ww_51bb4ca4e6b58" v='1.20' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl307"],"cl_bkg":"#0288D1","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#FFFFFF","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","sl_sot":"celsius","sl_ics":"one_a","font":"Arial"}'>Weather Data Source: <a href="https://wetterlabs.de/wetter_prag/3_tage/" id="ww_51bb4ca4e6b58_u" target="_blank">wetter 3 tage Prag</a></div><script async src="https://srv1.weatherwidget.org/js/?id=ww_51bb4ca4e6b58"></script>
+	<link rel="stylesheet" href="stylesa.css">
+	<header>
+		<title>Title.com News</title>
+		<h1>Title.com - the Best News Provider in our Modern World</h1>
+		<a id="idnesfire" target=”_blank”
+			href="https://www.idnes.cz/zpravy/domaci/hrensko-ceske-svycarsko-dym-kour-zplodiny-vitr-vanuti-smer-skodliviny.A220726_112938_domaci_ised">
+			<h2>Czech Switzerland currently on fire</h2>
+		</a>
+		<img id="forest fire" src="https://1gr.cz/fotky/idnes/22/073/cl5/IBA950129_p2022072601843.jpg">
+	</header>
+</head>
+<!-- Weather Forecast - Prague-->
+<div id="ww_51bb4ca4e6b58" v='1.20' loc='id'
+	a='{"t":"horizontal","lang":"en","ids":["wl307"],"cl_bkg":"#0288D1","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#FFFFFF","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","sl_sot":"celsius","sl_ics":"one_a","font":"Arial"}'>
+	Weather Data Source: <a href="https://wetterlabs.de/wetter_prag/3_tage/" id="ww_51bb4ca4e6b58_u"
+		target="_blank">wetter 3 tage Prag</a></div>
+<script async src="https://srv1.weatherwidget.org/js/?id=ww_51bb4ca4e6b58"></script>
 
 
-
-		<footer class="footer-distributed">
-
-			<div class="footer-right">
-
-				<a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-				<a target="_blank" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
-				<a target="_blank" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-				<a target="_blank" href="https://www.instagram.com/?hl=en"><i class="fa-brands fa-instagram"></i></a>
-
-			</div>
-
-			<div class="footer-left">
-
-				<p class="footer-links">
-					<a class="link-1" href="#">Home</a>
-
-					<a href="#">About</a>
-				</p>
-
-				<p>Title.com &copy; 2022</p>
-			</div>
-
-		</footer>
+<footer>
+	<div class="copyright">
+		<p>&copy 2022 - Title.com</p>
+	</div>
+	<div class="social">
+		<a href="#" class="support">Newsletter</a>
+		<a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+		<a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+		<a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+	</div>
+</footer>
 
 
 </html>
