--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>title.com</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dropdown-menu.css">
+
+<head>
+  <meta charset="UTF-8">
+  <title>title.com</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/dropdown-menu.css">
 </head>
 
 
 <body>
   <div class="page-header">
+    <div class="border-top"></div>
     <h1 class="title">title.com</h1>
     <div class="subheading">
-        <div>your daily news on the go</div>
-        <div class="spacer"></div>
+      <div>your daily news on the go</div>
+      <div class="spacer"></div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
-            <a href="">Subscribe to our newsletter</a>
-        </div>
+      <button class="dropbtn"><span class="material-symbols-outlined">
+          menu
+        </span>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+        <a href="">Subscribe to our newsletter</a>
+      </div>
     </div>
   </div>
 
   <section>
     <h2>Graphics cards are not available</h2>
-    <img src="obrazky/gk2.jfif" alt=""
-      width="auto"
-      height="200">
-    <p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by cryptocurrency miners.
+    <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
+    <p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by
+      cryptocurrency miners.
   </section>
-
-
-
-
-
-
-
