--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -11,13 +11,17 @@
 
 <body>
     <div class="page-header">
+        <div class="border-top"></div>
         <h1 class="title">title.com</h1>
         <div class="subheading">
-            <div> dolor sit amet</div>
+            <div>your daily news on the go</div>
             <div class="spacer"></div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn"><span class="material-symbols-outlined">
+                    menu
+                </span>
+            </button>
             <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
