--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -28,7 +28,7 @@
                 <a href="#">Link 2</a>
                 <a href="#">Link 3</a>
                 <a href="#">Link 4</a>
-                <a href="">Subscribe to our newsletter</a>
+                <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
     </div>
