--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -6,6 +6,8 @@
     <title>title.com</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dropdown-menu.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 
@@ -27,7 +29,7 @@
                 <a href="#">Link 2</a>
                 <a href="#">Link 3</a>
                 <a href="#">Link 4</a>
-                <a href="">Subscribe to our newsletter</a>
+                <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
     </div>
