--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -60,60 +60,84 @@
             })(document, 'script', 'tomorrow-sdk');
         </script>
 
-        <div class="tomorrow" data-location-id="022970,044856,122795,099972,072102,079773" data-language="EN"
+        <<<<<<< Updated upstream <div class="tomorrow" data-location-id="022970,044856,122795,099972,072102,079773"
+            data-language="EN"=======<div class="tomorrow" data-location-id="022970,122795,044856,099972,014309,079773"
+            data-language="EN">>>>>>> Stashed changes
             data-unit-system="METRIC" data-skin="light" data-widget-type="current6"
             style="padding-bottom:22px;position:relative;">
             <a href="https://www.tomorrow.io/weather/" rel="nofollow noopener noreferrer" target="_blank"
                 style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
-                <img alt="Powered by Tomorrow.io"
+                <img alt="Powered by Tomorrow.io" <<<<<<< Updated upstream
                     src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" width="140"
                     height="15" />
+                =======
+                src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" />
+                >>>>>>> Stashed changes
             </a>
-        </div>
-        <!-- Weather Forecast - Prague and other cities in the world-->
+            </div>
+            <!-- Weather Forecast - Prague and other cities in the world-->
 
-        <h2>News</h2>
-        <h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with the
-            authorities. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales quam. Duis suscipit a
-            nibh quis elementum. Aliquam lobortis dignissim interdum. Nam condimentum condimentum quam, eget fringilla
-            justo hendrerit vehicula. In lacinia orci vitae imperdiet suscipit. Sed hendrerit venenatis ornare. Nunc
-            imperdiet accumsan neque at convallis. Phasellus enim est, posuere nec ipsum ac, pretium venenatis turpis.
-            Pellentesque ultricies lacus sit amet diam viverra euismod.
+            <h2>News</h2>
+            <h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with
+                the
+                authorities. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales quam. Duis
+                suscipit a
+                nibh quis elementum. Aliquam lobortis dignissim interdum. Nam condimentum condimentum quam, eget
+                fringilla
+                justo hendrerit vehicula. In lacinia orci vitae imperdiet suscipit. Sed hendrerit venenatis ornare. Nunc
+                imperdiet accumsan neque at convallis. Phasellus enim est, posuere nec ipsum ac, pretium venenatis
+                turpis.
+                Pellentesque ultricies lacus sit amet diam viverra euismod.
 
-            Cras id luctus justo. Sed sed dolor non ipsum venenatis fringilla. Proin non sodales erat. Nullam at cursus
-            nisi. Sed vel rhoncus libero. Ut rutrum libero et cursus imperdiet. Duis placerat metus massa, ut pretium
-            quam accumsan sit amet. Sed enim neque, consectetur varius leo at, posuere consequat eros. Vivamus tincidunt
-            turpis at massa efficitur molestie. Nunc mi ante, pretium a convallis consectetur, finibus eget nunc. Mauris
-            aliquam nisi nec erat rutrum maximus. Maecenas quis iaculis purus, id porttitor turpis. Vestibulum posuere
-            iaculis mollis. Vivamus elementum velit id elit aliquet, non dictum justo suscipit. Vestibulum vel egestas
-            ex. Praesent mollis nisl augue, sodales consequat lacus rutrum et.
+                Cras id luctus justo. Sed sed dolor non ipsum venenatis fringilla. Proin non sodales erat. Nullam at
+                cursus
+                nisi. Sed vel rhoncus libero. Ut rutrum libero et cursus imperdiet. Duis placerat metus massa, ut
+                pretium
+                quam accumsan sit amet. Sed enim neque, consectetur varius leo at, posuere consequat eros. Vivamus
+                tincidunt
+                turpis at massa efficitur molestie. Nunc mi ante, pretium a convallis consectetur, finibus eget nunc.
+                Mauris
+                aliquam nisi nec erat rutrum maximus. Maecenas quis iaculis purus, id porttitor turpis. Vestibulum
+                posuere
+                iaculis mollis. Vivamus elementum velit id elit aliquet, non dictum justo suscipit. Vestibulum vel
+                egestas
+                ex. Praesent mollis nisl augue, sodales consequat lacus rutrum et.
 
-            Suspendisse sed libero arcu. In aliquam egestas elementum. Praesent at ornare nunc. In blandit ultrices mi.
-            Nunc euismod, orci eu dapibus auctor, erat sem efficitur erat, in eleifend sem arcu eget ante. Nulla non
-            erat eget nisl suscipit consequat eget interdum lorem. Aliquam id nulla sapien. Quisque eleifend mauris quis
-            felis volutpat porttitor. Curabitur pellentesque velit ac nisl tristique, sed tempor arcu viverra. Nulla
-            finibus, velit id volutpat posuere, erat erat vehicula ligula, quis dapibus arcu justo sed risus. Curabitur
-            est nisi, tristique ac ullamcorper non, blandit eleifend sapien. Vivamus hendrerit quis justo sed blandit.
-            Praesent eu congue arcu. Maecenas suscipit at turpis in ullamcorper. Morbi tincidunt pharetra dolor, at
-            convallis ex finibus id. Fusce quis arcu et velit condimentum fringilla.
+                Suspendisse sed libero arcu. In aliquam egestas elementum. Praesent at ornare nunc. In blandit ultrices
+                mi.
+                Nunc euismod, orci eu dapibus auctor, erat sem efficitur erat, in eleifend sem arcu eget ante. Nulla non
+                erat eget nisl suscipit consequat eget interdum lorem. Aliquam id nulla sapien. Quisque eleifend mauris
+                quis
+                felis volutpat porttitor. Curabitur pellentesque velit ac nisl tristique, sed tempor arcu viverra. Nulla
+                finibus, velit id volutpat posuere, erat erat vehicula ligula, quis dapibus arcu justo sed risus.
+                Curabitur
+                est nisi, tristique ac ullamcorper non, blandit eleifend sapien. Vivamus hendrerit quis justo sed
+                blandit.
+                Praesent eu congue arcu. Maecenas suscipit at turpis in ullamcorper. Morbi tincidunt pharetra dolor, at
+                convallis ex finibus id. Fusce quis arcu et velit condimentum fringilla.
 
-            Nullam fringilla, quam a facilisis ornare, nunc mi semper mauris, et tempor elit nisl ac magna. Donec
-            vulputate diam sem, aliquet ullamcorper risus ultrices eu. Suspendisse aliquam sapien finibus sapien
-            euismod, vel euismod dolor hendrerit. Nunc nec nisl molestie, convallis augue eget, vestibulum neque.
-            Phasellus pretium egestas varius. Etiam ligula augue, commodo sed mi at, interdum fringilla ligula. Cras in
-            diam a magna placerat auctor. Suspendisse quis efficitur metus. Nullam id neque est. Praesent nec porta
-            lorem. Ut aliquet, mauris in rhoncus feugiat, ante quam iaculis massa, eget dictum lacus elit volutpat
-            tellus. Aliquam imperdiet massa at augue mattis hendrerit. Nam eu nulla quam. In posuere tellus quis dolor
-            pharetra blandit.
+                Nullam fringilla, quam a facilisis ornare, nunc mi semper mauris, et tempor elit nisl ac magna. Donec
+                vulputate diam sem, aliquet ullamcorper risus ultrices eu. Suspendisse aliquam sapien finibus sapien
+                euismod, vel euismod dolor hendrerit. Nunc nec nisl molestie, convallis augue eget, vestibulum neque.
+                Phasellus pretium egestas varius. Etiam ligula augue, commodo sed mi at, interdum fringilla ligula. Cras
+                in
+                diam a magna placerat auctor. Suspendisse quis efficitur metus. Nullam id neque est. Praesent nec porta
+                lorem. Ut aliquet, mauris in rhoncus feugiat, ante quam iaculis massa, eget dictum lacus elit volutpat
+                tellus. Aliquam imperdiet massa at augue mattis hendrerit. Nam eu nulla quam. In posuere tellus quis
+                dolor
+                pharetra blandit.
 
-            Integer mattis posuere leo quis porta. Phasellus vel lobortis augue, non eleifend velit. Sed malesuada
-            ligula sapien, vitae euismod tortor tincidunt eu. Donec ut sollicitudin mi. Integer vestibulum faucibus sem,
-            id tincidunt mi accumsan non. Vivamus faucibus volutpat diam, vitae laoreet odio ultricies ac. Aliquam erat
-            volutpat. Nunc tempor sem nec lorem consectetur mattis. Suspendisse sed commodo lectus. Interdum et
-            malesuada fames ac ante ipsum primis in faucibus. In quis suscipit velit. Donec consequat ac orci in
-            sodales. Suspendisse et arcu nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed tempor
-            interdum tortor.</h1>
-        <div><a href></a></div>
+                Integer mattis posuere leo quis porta. Phasellus vel lobortis augue, non eleifend velit. Sed malesuada
+                ligula sapien, vitae euismod tortor tincidunt eu. Donec ut sollicitudin mi. Integer vestibulum faucibus
+                sem,
+                id tincidunt mi accumsan non. Vivamus faucibus volutpat diam, vitae laoreet odio ultricies ac. Aliquam
+                erat
+                volutpat. Nunc tempor sem nec lorem consectetur mattis. Suspendisse sed commodo lectus. Interdum et
+                malesuada fames ac ante ipsum primis in faucibus. In quis suscipit velit. Donec consequat ac orci in
+                sodales. Suspendisse et arcu nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed
+                tempor
+                interdum tortor.</h1>
+            <div><a href></a></div>
     </section>
 
 
