--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title">title.com</h1>
+        <h1 class="title">title.com ||</h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
