--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -60,20 +60,18 @@
             })(document, 'script', 'tomorrow-sdk');
         </script>
 
-        <<<<<<< Updated upstream <div class="tomorrow" data-location-id="022970,044856,122795,099972,072102,079773"
-            data-language="EN"=======<div class="tomorrow" data-location-id="022970,122795,044856,099972,014309,079773"
-            data-language="EN">>>>>>> Stashed changes
-            data-unit-system="METRIC" data-skin="light" data-widget-type="current6"
-            style="padding-bottom:22px;position:relative;">
-            <a href="https://www.tomorrow.io/weather/" rel="nofollow noopener noreferrer" target="_blank"
-                style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
-                <img alt="Powered by Tomorrow.io" <<<<<<< Updated upstream
-                    src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" width="140"
-                    height="15" />
-                =======
-                src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" />
-                >>>>>>> Stashed changes
-            </a>
+        <div class="tomorrow" data-location-id="022970,044856,122795,099972,072102,079773" data-language="EN">
+            <div class="tomorrow" data-location-id="022970,122795,044856,099972,014309,079773" data-language="EN">>>>>>>
+                Stashed changes
+                data-unit-system="METRIC" data-skin="light" data-widget-type="current6"
+                style="padding-bottom:22px;position:relative;">
+                <a href="https://www.tomorrow.io/weather/" rel="nofollow noopener noreferrer" target="_blank"
+                    style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;">
+                    <img alt="Powered by Tomorrow.io"
+                        src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" width="140"
+                        height="15" />
+                    src="https://weather-website-client.tomorrow.io/img/powered-by-tomorrow.svg" />
+                </a>
             </div>
             <!-- Weather Forecast - Prague and other cities in the world-->
 
