--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -14,7 +14,7 @@
 <body>
   <div class="page-header">
     <div class="border-top"></div>
-    <h1 class="title">title.com ||</h1>
+    <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
     <div class="subheading">
       <div>your daily news on the go</div>
       <div class="spacer"></div>
@@ -43,7 +43,7 @@
       <input type="text" id="fname" name="fname" value=""><br>
       <label for="lname">Last name:</label><br>
       <input type="text" id="lname" name="lname" value=""><br><br>
-      <label for="lname">email</label><br>
+      <label for="lname">E-mail</label><br>
       <input type="text" id="lname" name="lname" value=""><br><br>
     </form>
     <p>Choose your intrests</p>
