--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -13,7 +13,7 @@
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title"><a href="#">title.com ||</a></h1>
+        <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
@@ -28,7 +28,7 @@
                 <a href="#">Link 2</a>
                 <a href="#">Link 3</a>
                 <a href="#">Link 4</a>
-                <a href="">Subscribe to our newsletter</a>
+                <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
     </div>
