--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title">title.com ||</h1>
+        <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
@@ -36,6 +36,11 @@
 
     <section>
         <div>
-            <h1>thank you</h1>
+            <h1>THANK YOU</h1>
         </div>
+
+        <form>
+            <button type="home" formaction="main-page.html">home</button>
+        </form>
+        </button>
     </section>
