--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -137,7 +137,7 @@
             <p>&copy 2022 - Title.com</p>
         </div>
         <div class="social">
-            <a href="#" class="support">Newsletter</a>
+            <a href="formular.html" class="support">Newsletter</a>
             <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
             <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
             <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
