--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>title.com</title>
+  <title>Our newsletter</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/dropdown-menu.css">
   <link rel="stylesheet"
@@ -37,7 +37,7 @@
   <section>
     <h2>OUR NEWSLETTER</h2>
 
-    <h3>Be the first to know about title's news and events. </h3>
+    <h3>Be the first to know about title.com's news and events. </h3>
     <form>
       <label for="fname">First name:</label><br>
       <input type="text" id="fname" name="fname" value=""><br>
@@ -54,13 +54,13 @@
       <input type="checkbox" id="css" name="intrests" value="CSS">
       <label for="css">Technology</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">sport</label>
+      <label for="javascript">Sport</label>
 
     </form>
 
 
     <form>
-      <button type="submit" formaction="thankyou.html">submit</button>
+      <button type="submit" formaction="thankyou.html">Submit</button>
     </form>
     </button>
   </section>
