--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -34,13 +34,27 @@
         </div>
     </div>
 
-    <section>
-        <div>
-            <h1>THANK YOU</h1>
-        </div>
+    <div class="height">
+        <section>
+            <div>
+                <h1>THANK YOU</h1>
+            </div>
 
-        <form>
-            <button type="home" formaction="main-page.html">home</button>
-        </form>
-        </button>
-    </section>
+            <form>
+                <button type="home" formaction="main-page.html">home</button>
+            </form>
+            </button>
+        </section>
+
+        <footer>
+            <div class="copyright">
+                <p>&copy 2022 - Title.com</p>
+            </div>
+            <div class="social">
+                <a href="formular.html" class="support">Newsletter</a>
+                <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+                <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+                <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+            </div>
+        </footer>
+    </div>
