--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -55,6 +55,13 @@
       <label for="css">Technology</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
       <label for="javascript">sport</label>
+      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+      <label for="javascript">Fashion</label>
+      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+      <label for="javascript">Art</label>
+      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+      <label for="javascript">Science</label>
+
 
     </form>
 
