--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -54,13 +54,13 @@
       <input type="checkbox" id="css" name="intrests" value="CSS">
       <label for="css">Technology</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">sport</label>
+      <label for="javascript">sport</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Fashion</label>
+      <label for="javascript">Fashion</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Art</label>
+      <label for="javascript">Art</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Science</label>
+      <label for="javascript">Science</label><br>
 
 
     </form>
