--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -6,6 +6,7 @@
   <title>Our newsletter</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/dropdown-menu.css">
+  <link rel="stylesheet" href="css/button.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -46,7 +47,7 @@
       <label for="lname">E-mail</label><br>
       <input type="text" id="lname" name="lname" value=""><br><br>
     </form>
-    <p>Choose your intrests</p>
+    <p>Choose your interests</p>
 
     <form>
       <input type="checkbox" id="html" name="intrests" value="HTML">
@@ -60,7 +61,7 @@
 
 
     <form>
-      <button type="submit" formaction="thankyou.html">Submit</button>
+      <button id="button" type="submit" formaction="thankyou.html">Submit</button>
     </form>
     </button>
   </section>
