--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -6,6 +6,7 @@
     <title>title.com</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dropdown-menu.css">
+    <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -36,11 +37,11 @@
 
     <section>
         <div>
-            <h1>THANK YOU</h1>
+            <h1>THANK YOU!</h1>
         </div>
 
         <form>
-            <button type="home" formaction="main-page.html">home</button>
+            <button id="button" type="home" formaction="main-page.html">Home</button>
         </form>
         </button>
     </section>
