--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -6,6 +6,7 @@
   <title>title.com</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/dropdown-menu.css">
+  <link rel="stylesheet" href="css/button.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -37,7 +38,7 @@
     <p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by
       cryptocurrency miners.
     <form>
-      <button type="home" formaction="main-page.html">home</button>
+      <button id="button" type="home" formaction="main-page.html">Home</button>
     </form>
     </button>
   </section>
