--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -42,7 +42,7 @@
             </div>
 
             <form>
-                <button type="home" formaction="main-page.html">home</button>
+                <button id="button" type="home" formaction="main-page.html">home</button>
             </form>
             </button>
         </section>
