--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -37,8 +37,8 @@
     <section>
         <h2>News from world of technology</h2>
         <h1>Graphicscards are not aviable...</h1>
-        <a href="grafcard.html">graphicscards are not aviable...</a>
-        <a href="grafcard.html">learn more</a>
+        <a href="grafcard.html">Graphicscards are not available...</a>
+        <a href="grafcard.html">Learn more</a>
         <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
 
 
