--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -13,7 +13,7 @@
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
+        <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
@@ -36,9 +36,9 @@
 
     <section>
         <h2>News from world of technology</h2>
-        <h1>Graphicscards are not aviable...</h1>
-        <a href="grafcard.html">Graphicscards are not available...</a>
-        <a href="grafcard.html">Learn more</a>
+        <h1>Graphics cards are not aviable...</h1>
+        <a>Graphics cards are not available...</a>
+        <a id="learnmore" href="grafcard.html">Learn more</a>
         <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
 
 
