--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -15,7 +15,7 @@
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
+        <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
@@ -38,7 +38,7 @@
     <div class="height">
         <section>
             <div>
-                <h1>THANK YOU</h1>
+                <h1>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h1>
             </div>
 
             <form>
