--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -15,7 +15,7 @@
 <body>
   <div class="page-header">
     <div class="border-top"></div>
-    <h1 class="title"><a href="main-page.html">title.com ||</a></h1>
+    <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
     <div class="subheading">
       <div>your daily news on the go</div>
       <div class="spacer"></div>
