--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -55,7 +55,7 @@
       <input type="checkbox" id="css" name="intrests" value="CSS">
       <label for="css">Technology</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">sport</label><br>
+      <label for="javascript">Sport</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
       <label for="javascript">Fashion</label><br>
       <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
