--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -36,7 +36,7 @@
 
     <section>
         <h2>News from world of technology</h2>
-        <h1>Graphics cards are not aviable...</h1>
+        <h1>Graphics cards are not available...</h1>
         <a>Graphics cards are not available...</a>
         <a id="learnmore" href="grafcard.html">Learn more</a>
         <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
@@ -134,7 +134,7 @@
 
     <footer>
         <div class="copyright">
-            <p>&copy 2022 - Title.com</p>
+            <p>&copy 2022 - title.com</p>
         </div>
         <div class="social">
             <a href="formular.html" class="support">Newsletter</a>
