--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -35,8 +35,8 @@
 
 
     <section>
-        <h2>News from world of technology</h2>
-        <h1>Graphics cards are not available...</h1>
+        <h2><u>News from the world of technology</u></h2>
+        <h3>Graphics cards are not available...</h3>
         <a>Graphics cards are not available...</a>
         <a id="learnmore" href="grafcard.html">Learn more</a>
         <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
@@ -68,7 +68,7 @@
         </div>
         <!-- Weather Forecast - Prague and other cities in the world-->
 
-        <h2>News</h2>
+        <h2><u>Latest News</u></h2>
         <h1>Five-year-old Matthias found a real treasure with the detector. Father is threatened with trouble with
             the
             authorities. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales quam. Duis
