--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -35,11 +35,20 @@
 
 
     <section>
-        <h2>News from world of technology</h2>
-        <h1>Graphics cards are not aviable...</h1>
-        <a>Graphics cards are not available...</a>
-        <a id="learnmore" href="grafcard.html">Learn more</a>
-        <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
+
+        <h2>Featured articles</h2>
+        <hr>
+        <hr>
+        <br>
+        <div class="featured">
+            <h3>Title 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales quam. Duis suscipit a nibh quis
+                elementum. Aliquam lobortis dignissim...</p>
+            <br>
+            <h3>Title 2</h3>
+            <br>
+            <h3>Title 3</h3>
+        </div>
 
 
         <!-- Weather Forecast - Prague and other cities in the world-->
