--- a/sandbox/project/grafcard.html
+++ b/sandbox/project/grafcard.html
@@ -36,7 +36,7 @@
   <section>
     <h2>Graphics cards are not available</h2>
     <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
-    <p>Graphics cards are not available, or are overpriced see. PNY Nvidia Quadro Award. They are bought out by
+    <p>Graphics cards are not available, or are overpriced see. RTX 3080. They are bought out by
       cryptocurrency miners.
     <form>
       <button id="button" type="home" formaction="main-page.html">Home</button>
