--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -37,14 +37,16 @@
 
     <div class="height">
         <section>
-            <div>
-                <h1>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h1>
-            </div>
+            <div class="thx-height">
+                <div>
+                    <h1>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h1>
+                </div>
 
-            <form>
-                <button id="button" type="home" formaction="main-page.html">Home</button>
-            </form>
-            </button>
+                <form>
+                    <button id="button" type="home" formaction="main-page.html">Home</button>
+                </form>
+                </button>
+            </div>
         </section>
 
         <footer>
