--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -89,6 +89,13 @@
         </div>
         <!-- Weather Forecast - Prague and other cities in the world-->
 
+        <div>
+            <br><br><br>
+            <h2>Weather Forecast</h2>
+            <hr>
+            <hr>
+        </div>
+
 
     </section>
 
