--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto dolorem, similique eaque ipsam suscipit fugit
-accusantium delectus modi voluptatum expedita. Ipsam, illum non eum praesentium accusamus mollitia nihil omnis quas.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam doloribus explicabo aliquam eaque. Nobis, ad consectetur
-blanditiis incidunt assumenda et nulla recusandae dolorum vitae cumque adipisci in impedit soluta rerum eius animi non
-magni maiores mollitia, suscipit ducimus iste hic. Deleniti, officia distinctio natus veritatis sint repellat, ratione
-quidem ipsa quasi quo veniam at sed. Odit reiciendis minus placeat? Ut, labore pariatur? Odit beatae aut fugiat, quo
-voluptatum error voluptate ducimus aperiam natus incidunt, voluptatem delectus sunt nisi voluptatibus tempore,
-distinctio sed ea quasi odio? Aut officia accusantium corporis perspiciatis rem tenetur mollitia eius incidunt, eaque
-sunt. Consequatur, ipsam neque!
+
+<head>
+    <meta charset="UTF-8">
+    <title>Title.com - Your Daily News on the Go</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dropdown-menu.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+</head>
+
+<body>
+    <div class="page-header">
+        <div class="border-top"></div>
+        <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
+        <div class="subheading">
+            <div>your daily news on the go</div>
+            <div class="spacer"></div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><span class="material-symbols-outlined">
+                    menu
+                </span>
+            </button>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+                <a href="formular.html">Subscribe to our newsletter</a>
+            </div>
+        </div>
+    </div>
+
+    <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
+        voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at assumenda
+        blanditiis, modi, molestias fuga.</section>
+
+    <footer>
+        <div class="copyright">
+            <p>&copy 2022 - title.com</p>
+        </div>
+        <div class="social">
+            <a href="formular.html" class="support">Newsletter</a>
+            <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+            <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+            <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+        </div>
+    </footer>
+</body>
 
 </html>
