--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -44,7 +44,7 @@
             <h3>Title 1</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim...</p>
+                elementum. Aliquam lobortis dignissim... || <a href="artikul1.html">read more ></a></p>
             <br>
             <h3>Title 2</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
