--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -41,20 +41,20 @@
         <hr>
         <br>
         <div class="featured">
-            <h3>Title 1</h3>
+            <h3>Article 1</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... || <a href="artikul1.html">read more ></a></p>
+                elementum. Aliquam lobortis dignissim... || <a href="artikul1.html">continue reading ></a></p>
             <br>
-            <h3>Title 2</h3>
+            <h3>Article 2</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim...</p>
+                elementum. Aliquam lobortis dignissim... ||</p>
             <br>
-            <h3>Title 3</h3>
+            <h3>Article 3</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim...</p>
+                elementum. Aliquam lobortis dignissim... ||</p>
         </div>
 
 
@@ -91,7 +91,7 @@
 
         <div>
             <br><br><br>
-            <h2>Weather Forecast</h2>
+            <h2>Categories</h2>
             <hr>
             <hr>
         </div>
