--- a/sandbox/project/artikul3.html
+++ b/sandbox/project/artikul3.html
@@ -34,7 +34,7 @@
     </div>
 
     <section>
-        <h2>Are you tired? Have tea</h2>
+        <h2>Didn't you see an important game of the season?  We bring you a summary of the football match .</h2>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
         voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at assumenda
         blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, velit. Ullam
@@ -54,7 +54,7 @@
         libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
         officia
         similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora nisi eum.
-        Aliquid dolore nostrum libero accusantium ad? Ipsa quas neque aperiam repudiandae asperiores. Porro expedita
+        Aliquid dolore nostrum libero accusantium ad?<img src="obrazky/fotbal.jpg" alt="" class="image"> Ipsa quas neque aperiam repudiandae asperiores. Porro expedita
         itaque nemo qui quibusdam, praesentium ex tempora ut molestiae quis cumque eaque atque quasi magni, minus
         corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
         porro
@@ -62,7 +62,7 @@
         tempora
         facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
         quibusdam
-        explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt, omnis consequuntur error. Neque distinctio ea, animi
+        explicabo consequatur dignissimos eius animi, deserunt, omnis consequuntur error. Neque distinctio ea, animi
         error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam quisquam
         non quibusdam quos autem voluptatum soluta quidem doloribus? Ipsa veritatis voluptatibus quasi quisquam, ut,
         ratione hic atque quos, aperiam laudantium similique modi harum odit architecto. Saepe ratione harum itaque quas
