--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -34,15 +34,15 @@
     </div>
 
     <section>
-        <h2>Are you tired? Have tea</h2>
+        <h2>Are you tired? Have tea!</h2>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
         voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at assumenda
-        blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, velit. Ullam
+        blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Vitae, velit. Ullam
         dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis eum! Beatae obcaecati
         eveniet consequatur accusamus laudantium optio nobis provident itaque quam soluta, fuga unde maiores, error
         aliquam ipsum doloribus repellat officia eligendi atque blanditiis? Dignissimos ipsam unde nobis quia, molestias
         accusamus ullam consectetur. Numquam commodi similique ducimus error, asperiores enim architecto harum modi
-        ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium. Veniam quisquam, doloribus dolorum
+        ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.  <br> Veniam quisquam, doloribus dolorum
         ullam delectus fugit quidem dolore accusantium iure optio assumenda similique, atque libero quibusdam mollitia
         minima asperiores impedit sequi animi ea culpa consequatur! Sapiente, minus pariatur, adipisci distinctio
         excepturi illum placeat sint repellat incidunt, aut deleniti reiciendis possimus? Illum, blanditiis similique
@@ -54,7 +54,7 @@
         libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
         officia
         similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora nisi eum.
-        Aliquid dolore nostrum libero accusantium ad? Ipsa quas neque aperiam repudiandae asperiores. Porro expedita
+        Aliquid dolore nostrum libero accusantium ad? <br> Ipsa quas neque aperiam repudiandae asperiores. Porro expedita
         itaque nemo qui quibusdam, praesentium ex tempora ut molestiae quis cumque eaque atque quasi magni, minus
         corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
         porro
@@ -64,12 +64,12 @@
         quibusdam
         explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt, omnis consequuntur error. Neque distinctio ea, animi
         error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam quisquam
-        non quibusdam quos autem voluptatum soluta quidem doloribus? Ipsa veritatis voluptatibus quasi quisquam, ut,
+        non quibusdam quos autem voluptatum soluta quidem doloribus? <br> Ipsa veritatis voluptatibus quasi quisquam, ut,
         ratione hic atque quos, aperiam laudantium similique modi harum odit architecto. Saepe ratione harum itaque quas
         veniam sapiente temporibus laboriosam fuga. Eveniet debitis officia necessitatibus alias omnis blanditiis ullam!
         Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque possimus
         magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat eligendi
-        debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed. Ad error inventore natus! Voluptatum sunt
+        debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed. <br> Ad error inventore natus! Voluptatum sunt
         culpa, cumque nihil inventore mollitia dolorum pariatur corrupti voluptates optio error necessitatibus
         praesentium at perferendis, voluptatem deleniti. Fugit libero nihil obcaecati voluptas enim nostrum eveniet?
         Odio alias debitis iure enim natus distinctio amet sequi ab veritatis quam possimus aspernatur voluptatibus
