--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -109,7 +109,6 @@
                     font-size: 14pt;
                     text-align: center;
                     font-variant: small-caps;
-                    font-weight: bold;
                 }
             </style>
             </head>
@@ -123,8 +122,8 @@
                     <div class="grid-item">fashion</div>
                     <div class="grid-item">art</div>
                     <div class="grid-item">science</div>
-                    <div class="grid-item">7</div>
-                    <div class="grid-item">8</div>
+                    <div class="grid-item">lifestyle</div>
+                    <div class="grid-item">politics</div>
                     <div class="grid-item">9</div>
                 </div>
                 <br>
